[gd_scene load_steps=3 format=3 uid="uid://bdkp44aslledp"]

[ext_resource type="Script" path="res://GraphNode.gd" id="1_oaexx"]
[ext_resource type="PackedScene" uid="uid://c5vvqw8iapgqb" path="res://textEdit.tscn" id="2_3hwbh"]

[node name="GraphNode" type="GraphNode"]
offset_right = 9.0
offset_bottom = 55.0
draggable = false
selectable = false
title = "Hitlist Branch"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1_oaexx")
editableText = ExtResource("2_3hwbh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
text = "Delete"

[node name="MoveUp" type="Button" parent="HBoxContainer"]
layout_mode = 2
disabled = true
text = "⮝"

[node name="MoveDown" type="Button" parent="HBoxContainer"]
layout_mode = 2
disabled = true
text = "⮟"

[node name="IdLabel" type="Label" parent="."]
layout_mode = 2
text = "Branch ID"

[node name="BranchID" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Branch ID"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Hitlist"

[node name="addText" type="Button" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Add text"

[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MoveUp" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="HBoxContainer/MoveDown" to="." method="_on_move_down_pressed"]
[connection signal="pressed" from="addText" to="." method="_on_add_text_pressed"]
